# decimalgamma-cpp

./: .gitlab-ci.yml  LICENSE.txt  README.md
cmake/: ClangFormatCheckTarget.cmake  FindClangFormat.cmake
experiments/: Makefile  accumulate_benchmark.sh
plots/: Makefile  accumulate_benchmark.py
scripts/: jsonlines2csv.py
src/: CMakeLists.txt  bit_sequence.cpp  bit_sequence.h  bit_sequence_test.cpp  decimal_decomposition.cpp  decimal_decomposition.h  decimal_decomposition_test.cpp  decimal_decomposition_test.h  decimalinfinite.cpp  decimalinfinite.h  decimalinfinite_test.cpp  decimalinfinite_test.h  helloworldcpp.cpp  main.cpp
src/benchmarks/: accumulate_benchmark.cpp
src/decimalgamma/: decimalgamma.cpp  decimalgamma_test.cpp
src/decimalgamma/util/: bit_sequence.cpp  bit_sequence_test.cpp  decimal_decomposition.h  exceptions.h
src/decimalinfinite/: decimalinfinite.cpp  decimalinfinite.h  decimalinfinite_test.cpp  decimalinfinite_test.h
src/decimalinfinite/util/: bit_sequence.cpp  bit_sequence.h  bit_sequence_test.cpp  bit_sequence_test.h  decimal_decomposition.cpp  decimal_decomposition.h  decimal_decomposition_test.cpp  decimal_decomposition_test.h  exceptions.h  test.cpp  test.h
src/util/: bit_sequence_test.h  decimal_decomposition_test.h
